--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -1,12 +1,42 @@
 {
-    "english": "Inglês",
-    "spanish": "Espanhol",
-    "portuguese": "Portuguese",
-    "poweredBy": "Desenvolvido por",
-    "home": "Começar",
-    "contact": "Contato",
-    "favorites": "Favoritos",
-    "theme": "Tema",
-    "darkTheme": "Tema Escuro",
-    "lightTheme": "Tema Claro"
+  "english": "Inglês",
+  "spanish": "Espanhol",
+  "portuguese": "Português",
+  "poweredBy": "Desenvolvido por",
+  "home": "Início",
+  "contact": "Contato",
+  "favorites": "Favoritos",
+  "about": "Sobre Nós",
+  "theme": "Tema",
+  "darkTheme": "Tema Escuro",
+  "lightTheme": "Tema Claro",
+  "userDetails": {
+    "username": "Nome de Usuário",
+    "email": "eMail",
+    "titlePersonalProfesional": "Informações Pessoais e Profissionais",
+    "street": "Rua",
+    "suite": "Apartamento",
+    "city": "Cidade",
+    "zip": "Código Postal",
+    "phone": "Telefone",
+    "website": "Site",
+    "company": "Empresa",
+    "navBack": "Voltar",
+    "navHome": "Início",
+    "navForw": "Avançar"
+  },
+  "contactPage": {
+    "verifyMessage": "Por favor, verifique suas informações novamente.",
+    "successMessage": "Obrigado ${formData.fullName}, entraremos em contato em breve por e-mail.",
+    "fullname": "Nome completo",
+    "fullnameHelp": "Digite mais de 5 caracteres, sem espaços no início ou mais de um espaço entre palavras.",
+    "email": "eMail",
+    "emailHelp": "Digite um e-mail válido",
+    "sendButton": "Enviar"
+  },
+  "aboutPage": {
+    "title": "Nós",
+    "subtitle": "Nós Nós Nós Nós....",
+    "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante."
+  }
 }
